--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
     <style>
         body{
-            background-image: url('./images/Wallpaper\ 4k\ Prior\ Lamborghini\ Huracan\ Side\ View\ Wallpaper.jpg 4k\ Prior\ Lamborghini\ Huracan\ Side\ View\ Wallpaper.jpg');
-            background-size: cover;
+            background-image: url('./images/Wallpaper\ 4k\ Prior\ Lamborghini\ Huracan\ Side\ View\ Wallpaper.jpg');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-color: rgb(19, 18, 18); 
